# SkeletonViewer

./: .gitignore  CMakeLists.txt  README.md
assets/: 217_Gecko_rig.txt  mesh13_rigged.glb
assets/shader/: base.shader  id_picking.shader  id_picking_instanced.shader  transparent.shader  transparent_instanced.shader
src/: App.cpp  App.h  Camera.cpp  Camera.h  Cube.h  Event.h  EventDispatcher.h  GlobalTime.cpp  GlobalTime.h  Input.cpp  Input.h  Light.h  LightManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Model.cpp  Model.h  ParseArg.h  Path.cpp  Path.h  Renderer.cpp  Renderer.h  Rendering.h  Scene.h  SceneManager.h  SceneObject.h  Shader.cpp  Shader.h  SkeletonViewApp.cpp  SkeletonViewerApp.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vec.h  main.cpp
src/component/: Component.h
